--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>Chatbox</title>
 </head>
 <body>
-
-    <h1>Welcome to My Chatbox!</h1>
-    <p>This is a simple chatbox app.</p>
+    <h1>Welcome to the Real-Time Chatbox!</h1>
+    <p>This is a chatbox that you can embed into any webpage using a bookmarklet.</p>
 
     <!-- Your chatbox will be injected by the JavaScript below -->
-    <script src="chatbox.js"></script>
+    <script src="https://chatboxforcsa.vercel.app/chatbox.js"></script>
 </body>
 </html>
